# orch-ide

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
OrchIDE-0.1.0-arm64/: install.sh
OrchIDE-0.1.0-arm64/OrchIDE.app/Contents/: Info.plist
OrchIDE-0.1.0-arm64/OrchIDE.app/Contents/Resources/: AppIcon.icns.bak
OrchIDE-0.1.0-arm64/OrchIDE.app/Contents/_CodeSignature/: CodeResources
OrchIDE.app/Contents/Resources/: AppIcon.icns
bundle/ClaudeSessions.app/Contents/: Info.plist
iced_term_patched/: Cargo.toml
iced_term_patched/src/: backend.rs  bindings.rs  theme.rs  view.rs
mockup/: index.html
src/: cardPanelProvider.ts  extension.ts  main.rs  sessionManager.ts  types.ts
src/explorer/: mod.rs
src/git_info/: mod.rs
src/hooks/: mod.rs
src/logging/: mod.rs
src/persistence/: mod.rs
src/session/: mod.rs
src/terminal/: mod.rs
src/voice/: mod.rs
tasks/: 001-claude-agents-extension-mvp.md
